# cpp_training

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  PR_TEMPLATE.md  README.md  main  main.cpp
.cache/clangd/index/: check_pass.cpp.9B9F6C9EE31735A1.idx  ferz.cpp.786F4C96A977959F.idx  in_to_out.cpp.53D72BFD93D77A74.idx  leap_year.cpp.382CF80B28D3239A.idx  main.cpp.803DE8A7E884367C.idx  main.cpp.D4ED3EFC47275EB6.idx  month_days.cpp.D06C6C914C0DD9C1.idx  sum_from_str.cpp.370CE2BA384CC772.idx  triangle_exist.cpp.22545839DD494533.idx
docs/: BRANCHES.md  CONTRIBUTING.md  PR_TEMPLATE.md
src/: email_validate.cxx  ferz.cpp  main.cpp  progress.cpp  triangle_exist.cpp
src/lessons_01_move/: CMAkeLists.txt  CMakeLists.txt
src/lessons_01_move/Uncopyable/: main.cpp
src/lessons_01_move/buffer/: main  main.cpp
src/lessons_01_move/copy_move_counter/: main  main.cpp
src/lessons_01_move/copy_move_diff/: main.cpp
src/lessons_01_move/file_moving/: main.cpp
src/lessons_01_move/move_iterator/: main.cpp
src/lessons_01_move/move_semantic/: main.cpp
src/lessons_01_move/noexcept/: main.cpp
src/lessons_01_move/perfect_forwarding_wrap/: main.cpp
src/lessons_01_move/rvo_move/: main.cpp
src/lessons_01_move/self-assignment/: main.cpp
src/lessons_01_move/std_move_const/: main.cpp
src/lessons_02_parsing/: CMakeLists.txt
src/lessons_02_templates/: CMakeLists.txt
src/lessons_03_darray/: CMakeLists.txt
src/lessons_03_templates/: CMakeLists.txt
src/lessons_04_templates/: CMakeLists.txt
src/lessons_ya_contest/: CMakeLists.txt
(+16 files in other folders)
