add_executable(noexcept noexcept/main.cpp)
add_executable(buffer buffer/main.cpp)
add_executable(copy_move_diff copy_move_diff/main.cpp)
add_executable(copy_move_counter copy_move_counter/main.cpp)
add_executable(move_semantic move_semantic/main.cpp)
add_executable(uncopyable Uncopyable/main.cpp)
add_executable(rvo_move rvo_move/main.cpp)
add_executable(move_const std_move_const/main.cpp)
